Fix aligning of network headlines

--- a/css/eatlas_spatial_publisher.css
+++ b/css/eatlas_spatial_publisher.css
@@ -144,7 +144,7 @@
 }
 
 .eatlas_spatial_publisher_map .map_panel .template-menu li a {
-	margin: 0 0.5em;
+	margin: 0 1em 0 0;
 	padding: 0 0.2em 0.1em 0.2em;
 	font-weight: bold;
 	text-decoration: none;
